# funpar-y23t3-project-sql-parallel-engine

./: Cargo.toml  README.md
benches/: aggregation_benchmark.rs  group_by_benchmark.rs  join_benchmark.rs  scan_benchmark.rs  sorting_benchmark.rs
src/: aggregations.rs  group_by.rs  joins.rs  lib.rs  main.rs  parallel.rs  parser.rs  scan.rs  scans.rs  sorting.rs
src/tests/: integration_tests.rs
