[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlparser = "0.48.0"
rayon = "1.10.0"
criterion = "0.5.1"
rand = "0.8.5"

[[test]]
name = "integration_tests"
path = "src/tests/integration_tests.rs"

[[bench]]
name = "scan_benchmark"
harness = false

[[bench]]
name = "aggregation_benchmark"
harness = false

[[bench]]
name = "sorting_benchmark"
harness = false